--- a/index.html
+++ b/index.html
@@ -1,5 +1,207 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>Embedded QS3</title>
+        <link rel="stylesheet" type="text/css" href="https://sde-ebs-resources.s3.amazonaws.com/styles.css">
+        <script src="https://unpkg.com/amazon-quicksight-embedding-sdk@1.0.3/dist/quicksight-embedding-js-sdk.min.js"></script>
+    <script type="text/JavaScript">
+      var dashboard = null;
+
+      //See https://stackoverflow.com/questions/1912501/unescape-html-entities-in-javascript/34064434#34064434
+      let htmlDecode = (input) => {
+          var doc = new DOMParser().parseFromString(input, "text/html");
+          return doc.documentElement.textContent;
+      }
+
+      let getSelectedStates = () => {
+          let stateSelect = document.getElementById("stateSelect");
+          return stateSelect.selectedOptions;
+      }
+      function onDashboardLoad(payload){}
+      function onOKClick(){}
+
+      function onError(payload) {}
+
+      let embedDashboard = () => {
+          let containerDiv = document.getElementById("dashboardContainer");
+           if (dashboard === null) {
+    let proxy_URL = "https://np.jmlke.name/qs-embed";
+    console.log ("proxy_URL: "+proxy_URL);
+    fetch(proxy_URL)
+	.then(response => 
+         {
+          console.log("cstatus: "+response.status);
+          return response.text()})
+	.then(data => {
+          console.log(data);
+              let options = {
+		  url: data,
+                  container: containerDiv,
+                  scrolling: "no", height: "700px", width: "100%"
+              };
+              dashboard = QuickSightEmbedding.embedDashboard(options);
+              dashboard.on("error", onError);
+              dashboard.on("load", onDashboardLoad);
+          return data;        
+        });
+	   } else {
+              let selectedStates = getSelectedStates();
+              let parameters = {
+                  State: []
+              };
+              for(var i = 0; i < selectedStates.length; i++)
+                      parameters.State.push(selectedStates[i].label);
+              dashboard.setParameters(parameters);
+            }
+      }
+
+    let fetchNews = (elem, state) => {
+     let RSS_URL = "https://np.jmlke.name";
+     if (state !== undefined)
+         RSS_URL += "?state="+state.name.replace(/ /g, '+');
+    console.log ("RSS_URL: "+RSS_URL);
+    fetch(RSS_URL)
+	.then(response => 
+         {
+          return response.text()})
+	.then(data => { 
+            var parser = new DOMParser();
+            var xmlDoc = parser.parseFromString(data,"text/xml");
+	    const items = xmlDoc.querySelectorAll("item");
+	    var defaultCount = 3;
+	    var tot = (items.count < defaultCount) ? items.count : defaultCount;
+	    for (var i = 0; i < tot; i++) {
+		var el = items[i];
+                var title = el.querySelector("title").innerHTML;
+                var link = el.querySelector("link").innerHTML;
+                var lDiv = document.createElement("div");   
+                lDiv.className = "nws-lnk";
+                var aObj = document.createElement("a");
+                aObj.href = link;
+                aObj.text = title;
+                aObj.target = "_blank";
+                aObj.rel="noopener";
+                lDiv.appendChild(aObj);
+                lDiv.appendChild(document.createElement("p"));
+                var pubSpan = document.createElement("span");
+                pubSpan.className = "pubsrc";
+                pubSpan.innerText = el.querySelector("source").innerHTML+': ';
+                lDiv.appendChild(pubSpan);
+                var dateSpan = document.createElement("span");
+                dateSpan.className = "pubdate";
+                dateSpan.innerText = el.querySelector("pubDate").innerHTML;
+                lDiv.appendChild(dateSpan);
+                elem.appendChild(lDiv);
+            }
+	});
+    };
+let buildNewsContainer = () => {
+    var nc = document.getElementById("newsContainer");
+    nc.innerHTML = "";
+    let selectedStates = getSelectedStates();  
+    var num = selectedStates.length;
+    if (num > 0) {    
+      //console.log("num: "+num);
+      for (let opt of selectedStates) {
+	  var state = {abbrev: opt.value, name: opt.text};
+	  var sDiv = document.createElement("div");
+	  var spanHook = document.createElement("button");
+	  spanHook.textContent = state.name;
+	  spanHook.className = "collapsible";
+	  sDiv.appendChild(spanHook);
+	  spanHook.setAttribute("data-state", state.abbrev);
+	  var lDiv = document.createElement("div");
+	  lDiv.id = state.abbrev+"div";
+	  if (num > 1) lDiv.style.display = "none"; //show if only one selected
+          fetchNews(lDiv, state);
+	  sDiv.appendChild(lDiv);
+	  sDiv.onclick = function() {
+	      var d = document.getElementById(event.target.getAttribute("data-state")+"div");
+	      d.style.display = (d.style.display == "none") ? "block" : "none";
+	  }
+	  nc.appendChild(sDiv);
+       }
+    } else {
+       var stateDiv = document.createElement("div");
+       nc.appendChild(stateDiv);
+       fetchNews(stateDiv);
+   }
+};
+let refresh = () => {
+    buildNewsContainer();
+    embedDashboard();
+
+    //super hacky way to get rid of dashboard parameter selector goes here 
+    //style.display="none";
+}
+</script>    
+
+  </head>
+  <body onload="refresh()">
+    <div id="dashboardContainer">
+    </div>
+	<div class="col-db">
+        <label for="country">Select state(s)</label>
+        <select id="stateSelect" multiple="multiple">
+	<option value="AK">Alaska</option>
+	<option value="AZ">Arizona</option>
+	<option value="AR">Arkansas</option>
+	<option value="CA">California</option>
+	<option value="CO">Colorado</option>
+	<option value="CT">Connecticut</option>
+	<option value="DE">Delaware</option>
+	<option value="DC">District Of Columbia</option>
+	<option value="FL">Florida</option>
+	<option value="GA">Georgia</option>
+	<option value="HI">Hawaii</option>
+	<option value="ID">Idaho</option>
+	<option value="IL">Illinois</option>
+	<option value="IN">Indiana</option>
+	<option value="IA">Iowa</option>
+	<option value="KS">Kansas</option>
+	<option value="KY">Kentucky</option>
+	<option value="LA">Louisiana</option>
+	<option value="ME">Maine</option>
+	<option value="MD">Maryland</option>
+	<option value="MA">Massachusetts</option>
+	<option value="MI">Michigan</option>
+	<option value="MN">Minnesota</option>
+	<option value="MS">Mississippi</option>
+	<option value="MO">Missouri</option>
+	<option value="MT">Montana</option>
+	<option value="NE">Nebraska</option>
+	<option value="NV">Nevada</option>
+	<option value="NH">New Hampshire</option>
+	<option value="NJ">New Jersey</option>
+	<option value="NM">New Mexico</option>
+	<option value="NY">New York</option>
+	<option value="NC">North Carolina</option>
+	<option value="ND">North Dakota</option>
+	<option value="OH">Ohio</option>
+	<option value="OK">Oklahoma</option>
+	<option value="OR">Oregon</option>
+	<option value="PA">Pennsylvania</option>
+	<option value="RI">Rhode Island</option>
+	<option value="SC">South Carolina</option>
+	<option value="SD">South Dakota</option>
+	<option value="TN">Tennessee</option>
+	<option value="TX">Texas</option>
+	<option value="UT">Utah</option>
+	<option value="VT">Vermont</option>
+	<option value="VA">Virginia</option>
+	<option value="WA">Washington</option>
+	<option value="WV">West Virginia</option>
+	<option value="WI">Wisconsin</option>
+	<option value="WY">Wyoming</option>
+        </select>
+	<input type="button" value="OK" onclick="refresh()"/>
+    </div>
+    <div id="dashboardContainer" class="col-db"></div>
+    <div id="newsContainer" class="col-news"></div>
+  </body>
+</html>
+<!DOCTYPE html>
+<html>
 <head>
   <meta charset="utf-8">
   <title>Sample Deployment</title>
