--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ let buildNewsContainer = () => {
 };
 let refresh = () => {
     buildNewsContainer();
-    embedDashboard();
+  //  embedDashboard();
 
     //super hacky way to get rid of dashboard parameter selector goes here 
     //style.display="none";
@@ -199,38 +199,5 @@ let refresh = () => {
     <div id="dashboardContainer" class="col-db"></div>
     <div id="newsContainer" class="col-news"></div>
   </body>
-</html>
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <title>Sample Deployment</title>
-  <style>
-    body {
-      color: #ffffff;
-      background-color: #007f3f;
-      font-family: Arial, sans-serif;
-      font-size: 14px;
-    }
-    
-    h1 {
-      font-size: 500%;
-      font-weight: normal;
-      margin-bottom: 0;
-    }
-    
-    h2 {
-      font-size: 200%;
-      font-weight: normal;
-      margin-bottom: 0;
-    }
-  </style>
-</head>
-<body>
-  <div align="center">
-    <h1>VMDV!</h1>
-    <p>For next steps, read the AWS CodePipeline Documentation.</p>
-  </div>
-</body>
 </html>
 
