Re-enable embedDashboard

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ let buildNewsContainer = () => {
 };
 let refresh = () => {
     buildNewsContainer();
-  //  embedDashboard();
+    embedDashboard();
 
     //super hacky way to get rid of dashboard parameter selector goes here 
     //style.display="none";
