Use State Value for new dash

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                   State: []
                };
                for(var i = 0; i < selectedStates.length; i++)
-                   parameters.State.push(selectedStates[i].label);
+                   parameters.State.push(selectedStates[i].value);
                dashboard.setParameters(parameters);
            }
       }
