Changing param syntax
See:
https://docs.aws.amazon.com/quicksight/latest/user/parameters-in-a-url.html

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 		   for(var i = 0; i < selectedStates.length; i++)
 		       parameters.State.push(selectedStates[i].value);
 	       else
-		   parameters.State.push("ALL");
+		   parameters.State = "[ALL]";
 
 	       dashboard.setParameters(parameters);
            }
